fix: z-index for body-background

--- a/fancy-weather/src/style/core/_core.scss
+++ b/fancy-weather/src/style/core/_core.scss
@@ -1,3 +1,6 @@
+* {
+  z-index: 1;
+}
 body {
   text-align: center;
   height: 100vh;
@@ -24,7 +27,7 @@ body {
     height: 100%;
     background: #2D303A;
     opacity: 0.6;
-    z-index: -1;
+    z-index: 0;
   }
 }
 
